--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,71 @@
 # Dependencies
 node_modules/
-package-lock.json
 yarn.lock
 
 # Build output
+dist/
 *.map
 *.vsix
+coverage/
+.nyc_output/
 
 # Logs
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # IDE
 .vscode/
 .idea/
 *.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Temporary folders
+tmp/
+temp/
+*.tmp
+
+# Azure DevOps Extension
+*.tfx*
+.vs/
+
+# Test results
+test-results/
+junit.xml
+
+# Misc
+.cache/
+.parcel-cache/
+.eslintcache
