--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "publish": "tfx extension publish",
     "publish:dev": "tfx extension publish --manifests vss-extension.json --overrides-file config/dev.json --share-with",
     "lint": "eslint src/**/*.ts*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run src/test/unit",
+    "test:components": "vitest run src/test/components",
+    "test:integration": "vitest run src/test/integration",
+    "test:ui": "vitest --ui",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:major": "npm version major --no-git-tag-version",
+    "postversion": "echo 'Remember to update vss-extension.json version and run: git add . && git commit -m \"chore(release): bump version\"'"
   },
   "dependencies": {
     "azure-devops-extension-api": "^2.225.0",
@@ -24,14 +34,21 @@
     "react-dom": "^16.14.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.18",
     "css-loader": "^6.8.0",
+    "jsdom": "^27.4.0",
     "rimraf": "^5.0.0",
     "style-loader": "^3.3.0",
-    "ts-loader": "^9.4.0",
     "tfx-cli": "^0.17.0",
+    "ts-loader": "^9.4.0",
     "typescript": "^5.0.0",
+    "vitest": "^4.0.18",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.0"
   },
@@ -45,5 +62,17 @@
     "roadmap"
   ],
   "author": "Martin",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/your-org/ado-gantt.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-org/ado-gantt/issues"
+  },
+  "homepage": "https://github.com/your-org/ado-gantt#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
