feat: P0 fixes and major gaps implementation
- Add React ErrorBoundary for crash recovery
- Implement permission error handling with actionable messages
- Fix race conditions with AbortController and debounced filters
- Add dark mode with ThemeContext and ThemeToggle
- Implement accessibility improvements (ARIA labels, keyboard nav)
- Add PNG/PDF export functionality with html-to-image and jsPDF
- Create EmptyState component for no-data scenarios
- Update tests for new components and ThemeProvider integration
- Update README with new features

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "azure-devops-extension-sdk": "^4.0.2",
     "azure-devops-ui": "^2.167.0",
     "dhtmlx-gantt": "^8.0.0",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
